--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "danielstjules/stringy": "^3.1"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.8",
+        "mockery/mockery": "0.9.x-dev"
+    },
     "autoload": {
         "psr-4": {
             "JimChen\\Utils\\": "src/"
@@ -20,5 +24,10 @@
         "files": [
             "src/helpers.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "JimChen\\Utils\\Tests\\": "tests"
+        }
     }
 }
