--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "danielstjules/stringy": "^3.1"
+        "danielstjules/stringy": "^3.1",
+        "paragonie/random_compat": "^1.0|^2.0|9.99.99"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
